[gd_scene load_steps=17 format=3 uid="uid://bmpohxj6x0p81"]

[ext_resource type="Script" path="res://scripts/flappy_bird.gd" id="1_qejyv"]
[ext_resource type="Texture2D" uid="uid://cghnabgipn1ap" path="res://assets/sprites/background-day.png" id="1_xnm45"]
[ext_resource type="Material" uid="uid://bekmvgwbostmx" path="res://materials/gray_scale.tres" id="2_2ndo5"]
[ext_resource type="Script" path="res://scripts/Supprimeur.gd" id="3_ncs3i"]
[ext_resource type="PackedScene" uid="uid://dmi6unfstuo2a" path="res://scenes/sol.tscn" id="3_w638j"]
[ext_resource type="PackedScene" uid="uid://b1byd8v1b5272" path="res://scenes/HUD/hud.tscn" id="5_8nb8d"]
[ext_resource type="AudioStream" uid="uid://cxpg2puwnaads" path="res://assets/audio/point.wav" id="5_loi5l"]
[ext_resource type="LabelSettings" uid="uid://cs6xml02btjdn" path="res://settings/high_score_label_settings.tres" id="6_f0lfd"]
[ext_resource type="Script" path="res://scripts/Plafond.gd" id="6_gy4rq"]
[ext_resource type="Script" path="res://scripts/Score.gd" id="7_8atxd"]
[ext_resource type="AudioStream" uid="uid://0lieftmox2k3" path="res://assets/audio/swoosh.wav" id="7_eug27"]
[ext_resource type="Shader" uid="uid://mlykdgtkaq4v" path="res://shaders/flash_screen_texture.tres" id="7_y2yj4"]
[ext_resource type="LabelSettings" uid="uid://cng36oub0qmfj" path="res://settings/score_label_settings.tres" id="8_kasgo"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qyr61"]
shader = ExtResource("7_y2yj4")
shader_parameter/flashColor = Color(0, 0, 0, 0.533333)
shader_parameter/flashState = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n0g5r"]
size = Vector2(20, 456)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fcw2s"]
size = Vector2(288, 32)

[node name="Game" type="Node"]
script = ExtResource("1_qejyv")

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="Score" type="Label" parent="UILayer"]
anchors_preset = -1
anchor_left = 0.361
anchor_top = 0.031
anchor_right = 0.639
anchor_bottom = 0.141
offset_left = 0.0319977
offset_top = 0.128
offset_right = -0.0319977
offset_bottom = 5.808
text = "0
"
label_settings = ExtResource("8_kasgo")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("7_8atxd")

[node name="HighScore" type="Label" parent="UILayer/Score"]
z_as_relative = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.75
anchor_top = 0.062
anchor_right = 0.924
anchor_bottom = 0.107
offset_left = 28.0
offset_top = -3.844
offset_right = 94.08
offset_bottom = 57.366
text = "0"
label_settings = ExtResource("6_f0lfd")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PointSound" type="AudioStreamPlayer" parent="UILayer/Score"]
stream = ExtResource("5_loi5l")
volume_db = -15.0
pitch_scale = 1.5

[node name="HUD" parent="UILayer" instance=ExtResource("5_8nb8d")]

[node name="ResetSound" type="AudioStreamPlayer" parent="UILayer/HUD"]
stream = ExtResource("7_eug27")
pitch_scale = 0.4

[node name="AllFlashCanvas" type="CanvasLayer" parent="."]
layer = 0

[node name="BackBufferCopy" type="BackBufferCopy" parent="AllFlashCanvas"]
position = Vector2(144, 228)
scale = Vector2(1.44, 2.28)

[node name="GrayscaleRect" type="ColorRect" parent="AllFlashCanvas/BackBufferCopy"]
material = ExtResource("2_2ndo5")
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 125.0
color = Color(1, 1, 1, 0)

[node name="BackBufferCopy2" type="BackBufferCopy" parent="AllFlashCanvas"]
position = Vector2(144, 256)
scale = Vector2(1.44, 2.56)

[node name="FlashRect" type="ColorRect" parent="AllFlashCanvas/BackBufferCopy2"]
z_index = 1
material = SubResource("ShaderMaterial_qyr61")
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0

[node name="Background-day" type="Sprite2D" parent="."]
z_index = -1
texture = ExtResource("1_xnm45")
centered = false

[node name="TubeEntreeTimer" type="Timer" parent="."]

[node name="FlashTimer" type="Timer" parent="."]
one_shot = true

[node name="Supprimeur" type="Area2D" parent="."]
position = Vector2(-80, 256)
collision_layer = 8
collision_mask = 4
script = ExtResource("3_ncs3i")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Supprimeur"]
shape = SubResource("RectangleShape2D_n0g5r")

[node name="Sol" parent="." instance=ExtResource("3_w638j")]
position = Vector2(144, 512)

[node name="SpawnLocation" type="Node2D" parent="."]
position = Vector2(344, 256)

[node name="Plafond" type="Area2D" parent="."]
position = Vector2(144, 0)
collision_layer = 8
script = ExtResource("6_gy4rq")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Plafond"]
shape = SubResource("RectangleShape2D_fcw2s")

[node name="PlayerPosition" type="Marker2D" parent="."]
z_index = 3
position = Vector2(96, 304)

[connection signal="timeout" from="TubeEntreeTimer" to="." method="_on_tube_entree_timer_timeout"]
[connection signal="timeout" from="FlashTimer" to="." method="_on_flash_timer_timeout"]
[connection signal="area_entered" from="Supprimeur" to="Supprimeur" method="_on_area_entered"]
[connection signal="area_entered" from="Plafond" to="Plafond" method="_on_area_entered"]
